# RayTracer

./: CMakeLists.txt  README.md  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
result/: image10.ppm  image11.ppm  image12.ppm  image13.ppm  image14.ppm  image15.ppm  image16.ppm  image18.ppm  image19.ppm  image20.ppm  image3.ppm  image4.ppm  image5.ppm  image6.ppm  image7.ppm  image8.ppm  image9.ppm  imagePost.ppm  imagePre.ppm  imageTest.ppm
